--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,8 +23,12 @@
                 <div class="field">
     <%= f.label :avatar %>
     <%= f.file_field :avatar %>
-</div>
+    <br>
+    <%= f.label :bio %>
+    <br>
+    <%= f.text_area :bio, rows: 4 %>
   </div>
+</div>
 
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
@@ -32,10 +36,3 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
-
-
-
-
-
-<%# <%= f.label :username %> %>
-<%# <%= f.text_field :username, autocomplete: "username", class: "form-control" %> %>
