--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -8,11 +8,56 @@
 
 
 <% if user_signed_in? %>
-  <% if @user.avatar.attached? %>
-    <%= image_tag @user.avatar,  class: "rounded-circle me-3", style: "width: 150px; height: 150px;" %>
-  <% else %>
-    <% basic_avatar = 'blank-profile.jpeg' %>
-    <%= image_tag basic_avatar,  class: "rounded-circle me-3", style: "width: 150px; height: 150px;" %>
-  <% end %>
-  <span class="h2"><%= @user.username %></span>
+  <div style="display: flex; align-items: center;">
+
+    <% if @user.avatar.attached? %>
+      <%= image_tag @user.avatar,  class: "rounded-circle me-3", style: "width: 150px; height: 150px;" %>
+    <% else %>
+      <% basic_avatar = 'blank-profile.jpeg' %>
+      <%= image_tag basic_avatar,  class: "rounded-circle me-3", style: "width: 150px; height: 150px;" %>
+    <% end %>
+    <div style="display: flex; flex-direction: column;">
+      <span class = "h3"><%= @user.username %></span>
+      <span class = "h5"><%= "Followers 48    Following 55"%></span>
+      <% if @user.bio.present? %>
+        <p>"<%= @user.bio %>"</p>
+        <% end %>
+
+    </div>
+  </div>
+<% end %>
+        <hr>
+<%@user.posts.each do |post|  %>
+  <div class="col-sm-3 mb-4">
+      <div class="card" style="width: 18rem; border: none;">
+        <%= cl_image_tag post.image.key, class: "card-img-top", style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1;" if post.image.attached? %>
+        <div class="card-body">
+          <h4 class="card-title text-center" style="font-size: 1.2rem; font-weight: bold; color: #444;">
+            <%= post.title %>
+          </h4>
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <h5 style="font-size: 1.1rem;"><%= post.user.username %></h5>
+          </div>
+          <p class="card-text" style="font-size: 0.9rem; color: #555;"><%= post.content %></p>
+
+          <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.9rem;">
+            <div data-controller="favorites" data-favorites-id-value="<%= post.id %>">
+              <% if post.favorites.where(user: current_user).present? %>
+                <i class="fa-solid fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+              <% else %>
+                <i class="fa-regular fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+              <% end %>
+            </div>
+            <div id="post-<%= post.id %>-likes" class="d-flex align-items-center">
+              <%= link_to '', post_post_likes_path(post),
+                data: { turbo_method: 'post'},
+                class: 'far fa-heart mx-2 fa-xs text-body',
+                style: 'margin-top: -0.16rem;' %>
+              <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
+            </div>
+            <span>💬 comments</span>
+          </div>
+        </div>
+      </div>
+    </div>
 <% end %>
