--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,3 @@
-<ul class="navbar-nav flex">
-  <li class="nav-item align-self-end">
-    <% if !user_signed_in? %>
-      <%= link_to "Login", new_user_session_path,  class: "nav-link navbar-button" %>
-    <% end %>
-  </li>
-</ul>
-
 <div class="row justify-content-center">
   <div class="col-sm-8 my-3">
     <%= form_with url: posts_path(@post), method: :get, class: "d-flex" do %>
@@ -22,39 +14,35 @@
 <div class="row">
   <% @posts.each do |post| %>
     <div class="col-sm-3 mb-4">
-      <a href="<%= post_path(post) %>" style="text-decoration: none; color: inherit;">
-        <div class="card" style="width: 18rem; border: none;">
-          <%= cl_image_tag post.image.key, class: "card-img-top", style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1;" if post.image.attached? %>
-          <div class="card-body">
-            <h4 class="card-title text-center" style="font-size: 1.2rem; font-weight: bold; color: #444;">
-              <%= post.title %>
-            </h4>
-            <div style="display: flex; align-items: center; gap: 10px;">
-              <h5 style="font-size: 1.1rem;"><%= post.user.username %></h5>
+      <div class="card" style="width: 18rem; border: none;">
+        <%= cl_image_tag post.image.key, class: "card-img-top", style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1;" if post.image.attached? %>
+        <div class="card-body">
+          <h4 class="card-title text-center" style="font-size: 1.2rem; font-weight: bold; color: #444;">
+            <%= post.title %>
+          </h4>
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <h5 style="font-size: 1.1rem;"><%= post.user.username %></h5>
+          </div>
+          <p class="card-text" style="font-size: 0.9rem; color: #555;"><%= post.content %></p>
+
+          <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.9rem;">
+            <div data-controller="favorites" data-favorites-id-value="<%= post.id %>">
+              <% if post.favorites.where(user: current_user).present? %>
+                <i class="fa-solid fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+              <% else %>
+                <i class="fa-regular fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
+              <% end %>
             </div>
-            <p class="card-text" style="font-size: 0.9rem; color: #555;"><%= post.content %></p>
+            <div id="post-<%= post.id %>-likes" class="d-flex align-items-center">
+              <%= link_to '', post_post_likes_path(post),
+                data: { turbo_method: 'post'},
+                class: 'far fa-heart mx-2 fa-xs text-body',
+                style: 'margin-top: -0.16rem;' %>
+              <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
+            </div>
+            <span>💬 comments</span>
           </div>
         </div>
-      </a>
-      <div class="container" class="d-flex flex-row-reverse bd-highlight">
-      <div data-controller="favorites" data-favorites-id-value="<%= post.id %>" class="p-2 bd-highlight">
-        <% if post.favorites.where(user: current_user).present? %>
-          <i class="fa-solid fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
-        <% else %>
-          <i class="fa-regular fa-bookmark" data-action="click->favorites#toggleFavorite"></i>
-        <% end %>
-      </div>
-
-      <div id="post-<%= post.id %>-likes" class="d-flex align-items-center" class="p-2 bd-highlight">
-        <%= link_to '', post_post_likes_path(post),
-          data: { turbo_method: 'post' },
-          class: 'far fa-heart mx-2 fa-xs text-body',
-          style: 'margin-top: -0.16rem;' %>
-        <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
-      </div>
-      <div class="p-2 bd-highlight">
-      <span>💬 comments</span>
-      </div>
       </div>
     </div>
   <% end %>
