--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -22,12 +22,17 @@
       <% if @user.bio.present? %>
         <p>"<%= @user.bio %>"</p>
         <% end %>
-
+      <% if @user != current_user %>
+          <%= simple_form_for @user, url: follow_unfollow_path(@user), html: { method: :post } do |f| %>
+            <%= f.button :submit, @is_following ? "Unfollow" : "Follow", class: @is_following ? "btn btn-secondary" : "btn btn-primary" %>
+          <% end %>
+        <% end %>
     </div>
   </div>
+
 <% end %>
         <hr>
-    <%@user.posts.each do |post|  %>
+<%@user.posts.each do |post|  %>
   <div class="col-sm-3 mb-4" style="display: flex; align-items: center; width: 18rem; border: none;">
         <%= cl_image_tag post.image.key, class: "card-img-top", style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1;" if post.image.attached? %>
       <div  style="display: flex; flex-direction: column;">
