--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Notification</h2>
 <% @notifications.each do |notification|%>
   <div class="card">
-     <%= notification.content %>
+     <%= notification.post.title %>
   </div>
 <% end %>
