--- a/app/views/posts/partials/_navbar_top_index.html.erb
+++ b/app/views/posts/partials/_navbar_top_index.html.erb
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="/path/to/logo.png" alt="Logo" style="height: 40px;" class="me-2">
-      <span>Yarnlore</span>
+      <%= image_tag "knitting.png", alt: "Logo", height: 40, class: "me-2" %>
     </a>
 
     <div class="ms-auto d-flex align-items-center">
