--- a/app/views/users/_my_profile_footer.html.erb
+++ b/app/views/users/_my_profile_footer.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   </div>
 <div id="post-<%= post.id %>-likes" class="d-flex align-items-center" class="p-2 bd-highlight">
-  <%= link_to '', post_post_likes_path(post),
+  <%= link_to '', toggle_post_post_likes_path(post),
     data: { turbo_method: 'post' },
     class: 'far fa-heart mx-2 fa-xs text-body',
     style: 'margin-top: -0.16rem;' %>
